Hot Fix update 0.1.3

--- a/assets_sample/views/parts/cart.html
+++ b/assets_sample/views/parts/cart.html
@@ -2,21 +2,22 @@
     <table class="table table-striped table-hover">
         <thead>
         <tr>
-            <th>Reference</th>
+            <th class="refLabel">Reference</th>
             <th>Produit</th>
-            <th>Prix à l'unité</th>
+            <th class="priceLabel">Prix à l'unité</th>
             <th>Quantité</th>
             <th>Total</th>
+            <th></th>
         </tr>
         </thead>
         <tbody>
 
         </tbody>
-        <tr>
-            <th class="txt-right">Total Panier : <span class="value"></span> €</th>
-        </tr>
     </table>
-    <div class="modal-footer mt-2 pt-2">
-        <a class="purchaseButton" href="#commander"><button class="small primary btn">Passer commande</button></a>
+    <div class="text-right">
+        <div>Total Panier : <span class="value cartPrice"></span> €</div>
+    </div>
+    <div class="modal-footer mt-2 p-2">
+        <a class="purchaseButton" href="#commander"><button class="btn">Passer commande</button></a>
     </div>
 </div>
