--- a/assets_sample/views/parts/productCard.html
+++ b/assets_sample/views/parts/productCard.html
@@ -1,5 +1,5 @@
-<a href="" class="productCard card">
-    <img src="" class="productImg section media" alt="">
-    <h3 class="productName doc"></h3>
-    <div class="productPrice mb-1 mr-1 txt-right"></div>
+<a href="" class="productCard col-3 col-md-6 col-sm-12 mt-2 pt-2">
+    <img src="" class="productImg w-75 d-block ml-auto mr-auto mt-2 mb-2 pb-2" alt="">
+    <div class="h6 productName doc mb-2 pb-2"></div>
+    <div class="h5 productPrice mb-2 mt-2"></div>
 </a>
