--- a/assets_sample/views/pages/products.html
+++ b/assets_sample/views/pages/products.html
@@ -1,7 +1,65 @@
-<div id="productsPage">
-    <h1>Les produits</h1>
-    <div class="productsList row">
+<div class="columns productsCategory">
+    <div class="column col-12  mt-2 mb-2 pt-2 pb-2">
+        <div class="columns">
+            <div class="column col-10 p-centered mb-2 pb-2">
+                <h1 class="h3">All Products</h1>
+                <div class="desc">All our products for you.</div>
+            </div>
+        </div>
+    </div>
+    <div class="column filters col-2 col-lg-12">
+        <div class="h6">Filters</div>
+
+        <div class="divider"></div>
+
+        <div class="accordion">
+            <input type="checkbox" id="accordion-1" name="accordion-checkbox" checked hidden>
+            <label class="accordion-header h6 c-hand" for="accordion-1">
+                <span>Filter 1</span> <svg class="feather float-right"><use xlink:href="assets/svg/feather-sprite.svg#plus"/></svg>
+            </label>
+            <div class="accordion-body ml-2 pl-2" data-filter-group="filter1">
+                <label class="form-checkbox">
+                    <input type="checkbox" data-filter="1" checked>
+                    <i class="form-icon"></i> 1
+                </label>
+                <label class="form-checkbox">
+                    <input type="checkbox" data-filter="2" checked>
+                    <i class="form-icon"></i> 2
+                </label>
+                <label class="form-checkbox">
+                    <input type="checkbox" data-filter="3" checked>
+                    <i class="form-icon"></i> 3
+                </label>
+            </div>
+        </div>
+
+        <div class="divider"></div>
+
+        <div class="accordion">
+            <input type="checkbox" id="accordion-2" name="accordion-checkbox" checked hidden>
+            <label class="accordion-header h6 c-hand" for="accordion-2">
+                <span>Filter 2</span> <svg class="feather float-right"><use xlink:href="assets/svg/feather-sprite.svg#plus"/></svg>
+            </label>
+            <div class="accordion-body ml-2 pl-2" data-filter-group="filter2">
+                <label class="form-checkbox">
+                    <input type="checkbox" data-filter="orange" checked>
+                    <i class="form-icon"></i> Orange
+                </label>
+                <label class="form-checkbox">
+                    <input type="checkbox" data-filter="blue" checked>
+                    <i class="form-icon"></i> Blue
+                </label>
+                <label class="form-checkbox">
+                    <input type="checkbox" data-filter="white" checked>
+                    <i class="form-icon"></i> White
+                </label>
+            </div>
+        </div>
+
+        <div class="divider"></div>
 
     </div>
+    <div class="column col-10 col-lg-12">
+        <div data-cat="all" data-count="-1" class="categoriesElement columns m-2 justify-around"></div>
+    </div>
 </div>
-
