--- a/assets_sample/views/parts/shipping.html
+++ b/assets_sample/views/parts/shipping.html
@@ -1,15 +1,14 @@
 <div class="panel">
     <div class="panel-header">
-        <h2>Livraison</h2>
+        <h2>Shipping <small>not yet finish</small></h2>
     </div>
     <div class="panel-body">
         <div class="card mb-2" id="shipping-1">
             <div class="card-header h3">
-                Livraison forfaitaire <small class="price"> • 50€ttc</small>
+                Classic<small class="price"> • 50€ttc</small>
             </div>
             <div class="card-body">
-                <small>Offerte à partir de 2000€ d'achat de quincaillerie uniquement</small><br>
-                Total de la commande livraison incluse : <span class="totalPrice h4"></span> TTC
+                <small> < 500€</small><br>
             </div>
             <div class="card-footer">
 
@@ -18,30 +17,15 @@
 
         <div class="card mb-2" id="shipping-2">
             <div class="card-header h3">
-                Livraison forfaitaire <small class="price"> • 300€ttc</small>
+                Premium <small class="price"> • 300€ttc</small>
             </div>
             <div class="card-body">
-                <small>Offerte à partir de 4000€ d'achat de volets</small><br>
-                Total de la commande livraison incluse : <span class="totalPrice h4"></span> TTC
+                <small> > 500€</small><br>
             </div>
             <div class="card-footer">
 
             </div>
         </div>
-
-        <div class="card mb-2" id="shipping-3">
-            <div class="card-header h3">
-                Frais de livraison Offerts
-            </div>
-            <div class="card-body">
-                <small>Les frais de livraison vous sont offerts.</small><br>
-                Total de la commande livraison incluse : <span class="totalPrice h4"></span> TTC
-            </div>
-            <div class="card-footer">
-
-            </div>
-        </div>
-
 
     </div>
     <div class="panel-footer">
