--- a/assets_sample/views/parts/cart.html
+++ b/assets_sample/views/parts/cart.html
@@ -1,5 +1,5 @@
 <div class="cart">
-    <table class="table table-striped table-hover">
+    <table class="table">
         <thead>
         <tr>
             <th class="refLabel">Reference</th>
