--- a/assets_sample/views/pages/home.html
+++ b/assets_sample/views/pages/home.html
@@ -1,2 +1,23 @@
-<h1>Jord 🌱<sub>alpha</sub></h1>
-<span class="h6">Try something vanilla !</span>
+<div class="columns">
+    <div class="col-12 text-center mt-2 mb-2">
+        <h1>Jord 🌱<sub>alpha</sub></h1>
+        <span class="h6">JORD is a Single Page Application for eShop, with a minimal of dependencies. Better, Faster, Stronger with Javascript Vanilla.<br>
+            This is a personnal project, but if you want you can use it with love and respect. JORD is NOT a CMS.</span>
+    </div>
+
+    <div class="col-12 mt-2 mb-2">
+        <div class="divider mt-2 pt-2"></div>
+        <h2>Category 1</h2>
+        <div class="column col-10 col-lg-12">
+            <div data-cat="category-1" data-count="3" class="categoriesElement columns m-2 justify-around"></div>
+        </div>
+        <div class="text-right w-100"><a href="#products">All products <svg class="feather"><use xlink:href="assets/svg/feather-sprite.svg#arrow-right"/></svg></a></div>
+    </div>
+    <div class="col-12 mt-2 mb-2">
+        <h2>Category 2</h2>
+        <div class="column col-10 col-lg-12">
+            <div data-cat="category-2" data-count="3" class="categoriesElement columns m-2 justify-around"></div>
+        </div>
+        <div class="text-right w-100"><a href="#products">All products <svg class="feather"><use xlink:href="assets/svg/feather-sprite.svg#arrow-right"/></svg></a></div>
+    </div>
+</div>
