--- a/assets_sample/views/parts/footer.html
+++ b/assets_sample/views/parts/footer.html
@@ -1,3 +1,35 @@
-<footer>
-    <p>Footer text</p>
+<div class="divider"></div>
+<footer class="columns mt-2 pt-2">
+    <div class="col-12 m-auto mb-2 pb-2 mt-2 pt-2">
+        <div class="columns justify-between">
+            <div class="col-5">
+                <h3>License</h3>
+                <small>This program is free software: you can redistribute it and/or modify
+                    it under the terms of the GNU General Public License as published by
+                    the Free Software Foundation, either version 3 of the License, or
+                    (at your option) any later version.<br>
+                    This program is distributed in the hope that it will be useful,
+                    but WITHOUT ANY WARRANTY; without even the implied warranty of
+                    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+                    GNU General Public License for more details.<br>
+                    You should have received a copy of the GNU General Public License
+                    along with this program.  If not, see <a href="https://www.gnu.org/licenses/">https://www.gnu.org/licenses/</a>.</small>
+            </div>
+            <div class="col-5">
+                <h3>Links</h3>
+                <ul>
+                    <li><a href="https://github.com/AndreLeclercq/JORD" target="_blank">Source Github</a></li>
+                    <li><a href="https://andreleclercq.github.io/JORD/#/" target="_blank">Documentation</a></li>
+                    <li><a href="https://github.com/AndreLeclercq/JORD/projects/2" target="_blank">Progress of the Project</a></li>
+                    <li><a href="https://github.com/AndreLeclercq/JORD/issues" target="_blank">Issues</a></li>
+                </ul>
+            </div>
+<!--            <div class="col-4">-->
+
+<!--            </div>-->
+        </div>
+    </div>
+    <div class="col-12 text-center mt-2 pt-2">
+        JORD - Copyright &copy 2020 André LECLERCQ
+    </div>
 </footer>
