--- a/assets_sample/views/parts/productsOptions.html
+++ b/assets_sample/views/parts/productsOptions.html
@@ -18,7 +18,7 @@
 
 <div id="radio">
     <div class="optGrp">
-        <label class="form-label title h4">Color</label>
+        <label class="form-label title h4"></label>
         <div class="radioGroup form-group">
             <label class="form-radio">
                 <input type="radio" data-name="" name="color" value="color-1">
