--- a/assets_sample/views/parts/navbar.html
+++ b/assets_sample/views/parts/navbar.html
@@ -1,6 +1,6 @@
 <header class="navbar pt-2 pb-2 mt-2 mb-2">
     <section class="navbar-section">
-        <a href="#" class="navbar-brand mr-2">JORD</a>
+        <a href="#" class="navbar-brand mr-2">🌱</a>
         <a href="#" class="btn btn-link mr-2">Home</a>
         <a href="#nos-produits" class="btn btn-link mr-2">Products</a>
     </section>
