--- a/public/assets/views/pages/config_claire_voie.html
+++ b/public/assets/views/pages/config_claire_voie.html
@@ -10,7 +10,7 @@
                 <div class="h3">A partir de <span id="price"></span><small> € TTC </small></div>
                 <form id="configclo">
                     <div>
-                        <input type="text" id="embout" data-ref="emb01" hidden>
+                        <input type="text" id="embout" data-ref="emb" hidden>
                         <input type="text" id="entretoise" data-ref="ent02" hidden>
                         <input type="text" id="lame" data-ref="lam02" hidden>
                         <input type="text" id="raid" data-ref="raid" hidden>
@@ -41,7 +41,7 @@
                     <div class="form-group">
                         <label class="form-label">Fixation</label>
                         <label class="form-radio">
-                            <input type="radio" name="fixe" id="platine" checked data-ref="pl01">
+                            <input type="radio" name="fixe" id="platine" checked data-ref="pla">
                             <i class="form-icon"></i> Platine
                         </label>
                         <label class="form-radio">
@@ -49,6 +49,17 @@
                             <i class="form-icon"></i> Scellé
                         </label>
                     </div>
+                    <div class="form-group scellement">
+                        <label class="form-radio">
+                            <input type="radio" name="scelle" id="scelleMur" data-height="0.33" checked>
+                            <i class="form-icon"></i> Scellé dans mur
+                        </label>
+                        <label class="form-radio">
+                            <input type="radio" name="scelle" id="scelleTerre" data-height="0.55">
+                            <i class="form-icon"></i> Scellé dans terre
+                        </label>
+                    </div>
+
                     <div id="dimension">
                         <div class="form-group">
                             <label class="form-label" for="longueur">Longueur en mètre</label>
@@ -58,54 +69,65 @@
                         </div>
 
 
-                        <select id="hauteur" class="form-control">
+                        <select id="hauteur" class="form-control hauteur">
                             <option class="optProduct" value="">Selectionnez une hauteur</option>
 
-                            <option class="optProduct" value="0.11" id="0.11" data-ref="pot06" selected>0.11 metre
+                            <option class="optProduct" value="0.11" data-ref="pot06" selected>0.11 metre
                             </option>
 
-                            <option class="optProduct" value="0.22" id="0.22" data-ref="pot06">0.22 metre</option>
+                            <option class="optProduct" value="0.22" data-ref="pot06">0.22 metre</option>
 
-                            <option class="optProduct" value="0.33" id="0.33" data-ref="pot06">0.33 metre</option>
+                            <option class="optProduct" value="0.33" data-ref="pot06">0.34 metre</option>
 
-                            <option class="optProduct" value="0.44" id="0.44" data-ref="pot06">0.44 metre</option>
+                            <option class="optProduct" value="0.44" data-ref="pot06">0.45 metre</option>
 
-                            <option class="optProduct" value="0.55" id="0.55" data-ref="pot06">0.55 metre</option>
+                            <option class="optProduct" value="0.55" data-ref="pot06">0.56 metre</option>
 
-                            <option class="optProduct" value="0.66" id="0.66" data-ref="pot125">0.66 metre</option>
+                            <option class="optProduct" value="0.66" data-ref="pot125">0.67 metre</option>
 
-                            <option class="optProduct" value="0.77" id="0.77" data-ref="pot125">0.77 metre</option>
+                            <option class="optProduct" value="0.77" data-ref="pot125">0.79 metre</option>
 
-                            <option class="optProduct" value="0.88" id="0.88" data-ref="pot125">0.88 metre</option>
+                            <option class="optProduct" value="0.88" data-ref="pot125">0.90 metre</option>
 
-                            <option class="optProduct" value="0.99" id="0.99" data-ref="pot125">0.99 metre</option>
+                            <option class="optProduct" value="0.99" data-ref="pot125">1.01 metre</option>
 
-                            <option class="optProduct" value="1.10" id="1.10" data-ref="pot125">1.10 metre</option>
+                            <option class="optProduct" value="1.10" data-ref="pot125">1.12 metre</option>
 
-                            <option class="optProduct" value="1.21" id="1.21" data-ref="pot125">1.21 metre</option>
+                            <option class="optProduct" value="1.21" data-ref="pot125">1.24 metre</option>
 
-                            <option class="optProduct" value="1.32" id="1.32" data-ref="pot185">1.32 metre</option>
+                            <option class="optProduct" value="1.32" data-ref="pot185">1.35 metre</option>
 
-                            <option class="optProduct" value="1.43" id="1.43" data-ref="pot185">1.43 metre</option>
+                            <option class="optProduct" value="1.43" data-ref="pot185">1.46 metre</option>
 
-                            <option class="optProduct" value="1.54" id="1.54" data-ref="pot185">1.54 metre</option>
+                            <option class="optProduct" value="1.54" data-ref="pot185">1.57 metre</option>
 
-                            <option class="optProduct" value="1.65" id="1.65" data-ref="pot185">1.65 metre</option>
+                            <option class="optProduct" value="1.65" data-ref="pot185">1.69 metre</option>
 
-                            <option class="optProduct" value="1.76" id="1.76" data-ref="pot185">1.76 metre</option>
+                            <option class="optProduct" value="1.76" data-ref="pot185">1.80 metre</option>
+
+                            <option class="optProduct" value="1.87" data-ref="pot250" hidden></option>
+
+                            <option class="optProduct" value="1.98" data-ref="pot250" hidden></option>
+
+                            <option class="optProduct" value="2.09" data-ref="pot250" hidden></option>
+
+                            <option class="optProduct" value="2.20" data-ref="pot250" hidden></option>
+
+                            <option class="optProduct" value="2.31" data-ref="pot250" hidden></option>
+
                         </select>
-                        <div>
-                            <div class="btn btn-primary mt-2 pt-2" id="btnadd">
-                                <svg class="feather ml-2 mr-1">
-                                    <use xlink:href="assets/svg/feather-sprite.svg#shopping-cart"/>
-                                </svg>
-                                <span class="ml-2 mr-2">Ajouter au panier</span></div>
-                        </div>
+
+                    </div>
+                    <div>
+                        <div class="btn btn-primary mt-2 pt-2" id="btnadd">
+                            <svg class="feather ml-2 mr-1">
+                                <use xlink:href="assets/svg/feather-sprite.svg#shopping-cart"/>
+                            </svg>
+                            <span class="ml-2 mr-2">Ajouter au panier</span></div>
                     </div>
                 </form>
 
 
-                <div id="resultat"></div>
                 <div class="divider mt-2 mb-2 pt-2 pb-2"></div>
 
             </div>
