--- a/public/assets/views/pages/nos_clotures.html
+++ b/public/assets/views/pages/nos_clotures.html
@@ -14,19 +14,19 @@
             <a href="#config-persienne" class="col-3 col-md-6 col-sm-12 mt-2 pt-2">
                 <img src="assets/images/persienne.png" class=" w-75 d-block ml-auto mr-auto mt-2 mb-2 pb-2" alt="">
                 <div class="h6 productName doc mb-2 pb-2">Cloture aluminium à lame persienne</div>
-                <div class="h5 productPrice mb-2 mt-2">57.40 €</div>
+                <div class="h5 productPrice mb-2 mt-2"> A partir de 57.40 €</div>
             </a>
             <div class="divider-vert"></div>
             <a href="#config-lame-large" class="col-3 col-md-6 col-sm-12 mt-2 pt-2">
                 <img src="assets/images/large.png" class=" w-75 d-block ml-auto mr-auto mt-2 mb-2 pb-2" alt="">
                 <div class="h6 productName doc mb-2 pb-2">Cloture aluminium à lame large</div>
-                <div class="h5 productPrice mb-2 mt-2">70.30 €</div>
+                <div class="h5 productPrice mb-2 mt-2"> A partir de 70.30 €</div>
             </a>
             <div class="divider-vert"></div>
             <a href="#config-claire-voie" class="col-3 col-md-6 col-sm-12 mt-2 pt-2">
                 <img src="assets/images/claire_voie.png" class=" w-75 d-block ml-auto mr-auto mt-2 mb-2 pb-2" alt="">
                 <div class="h6 productName doc mb-2 pb-2">Cloture aluminium à claire voie</div>
-                <div class="h5 productPrice mb-2 mt-2">56.15€</div>
+                <div class="h5 productPrice mb-2 mt-2"> A partir de 55.65€</div>
             </a>
         </div>
     </div>
