Re Organize project directories, refacto compiler & router, fix bugs

--- a/src/sass/spectre/spectre.scss
+++ b/src/sass/spectre/spectre.scss
@@ -1,5 +1,5 @@
 // Variables and mixins
-@import "../../../public/assets/sass/variables";
+@import "../../../assets/sass/variables";
 @import "variables";
 @import "mixins";
 
