--- a/src/sass/_toast.scss
+++ b/src/sass/_toast.scss
@@ -1,5 +1,5 @@
-#pushNotification {
-  .toast {
+#notice {
+  &.toast {
     display:flex;
     position: fixed;
     //top: calc(var(--universal-margin) * 5);
@@ -17,12 +17,12 @@
     }
   }
 
-  .hide {
+  &.hide {
     opacity:0;
     transition: all .5s ease-in-out;
     pointer-events: none;
   }
-  .show {
+  &.show {
     opacity:1;
     transition: all .5s ease-in-out;
   }
